	* apps/examples/touchscreen:  Can now be configured to work with a mouse
	  interface as well (2014-2-10).
	* Several files changes based on complaints from the tool CppCheck.  Some
	  latent bugs were fixed (and most likely some new typos were introduced)
	  (2014-2-10).
	* apps/examples/nximage/Kconfig and apps/examples/uip/Kconfig: Incomplete
	  Kconfig files fleshed out by Alan Carvalho de Assis (2014-2-18).
	* apps/nshlib: 'rmdir' can now be used in the pseudo-filesystem.  Hence,
	  the command needs to be available even if there are no write-able
	  filesystem enabled (2014-2-19).
	* apps/nshlib: 'mkdir' can now be used in the pseudo-filesystem.  Hence,
	  the command needs to be available even if there are no write-able
	  filesystem enabled (2014-2-19).
	* apps/nshlib: 'mv' can now be used in the pseudo-filesystem.  Hence,
	  the 'mv' command needs to be available even if there are no write-able
	  filesystem enabled (2014-2-19).
	* apps/nshlib: 'rm' can now be used to remove nodes frm the pseudo-
	  filesystem.  Hence, the 'rm' command needs to be available even if there
	  are no write-able filesystem enabled (2014-2-20).
	* CONFIG_DISABLE_PSEUDOFS_OPERATIONS: This new configuration setting
	  basically backs out the recent changes to mv, rm, mkdir, and rmdir
	  (2014-2-20).
	* nshlib/Kconfig:  Use CONFIG_DEFAULT_SMALL in selecting default
	  settings (2014-2-20).
	* nshlib/nsh_telnetd.c:  Use strncpy vs strcpy to avoid overrun the
	  username and password buffers.  From Bertold Van den Bergh (2014-2-22).
	* nshlib/Kconfig, nsh_proccmds.c:  If the CPU load feature and the procfs
	  features are enabled, then show CPU load used by each thread in the
	  'ps' command (2014-2-27).
	* nshlib/nsh_fscmds.c:  Add a newline after printing the file in the
	  'cat' command.  This prevents the NSH prompt from be in the same line
	  as the final line of the file in the case where there is no newline
	  at the end of the file (2014-2-27).